# nanokontrol2_driver

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
